tests/spec/emit/snapshots/parenthesized_task_statement.snap
---
source: tests/spec/emit/expressions.rs
description: |
  
  fn noop() {}
  
  fn main() {
    (task { noop() })
  }
---
package main

func noop() {}

func main() {
	go func() {
		noop()
	}()
}
