tests/spec/emit/snapshots/parenthesized_tuple_struct_call.snap
---
source: tests/spec/emit/expressions.rs
description: "input: \nstruct Point(int, int)\n\nfn test() -> Point {\n  (Point)(1, 2)\n}\n"
---
package main

type Point struct {
	F0 int
	F1 int
}

func test() Point {
	return Point{
		F0: 1,
		F1: 2,
	}
}
