tests/spec/emit/snapshots/parenthesized_ufcs_generic_return_only_type_args.snap
---
source: tests/spec/emit/functions.rs
description: |
  
  struct Factory {}
  
  impl Factory {
    fn make<T>(self) -> Slice<T> {
      Slice.new<T>()
    }
  }
  
  fn test() -> Slice<int> {
    let f = Factory {}
    (Factory.make)(f)
  }
---
package main

type Factory struct{}

func Factory_make[T any](_ Factory) []T {
	return []T{}
}

func test() []int {
	f := Factory{}
	return Factory_make[int](f)
}
