tests/spec/emit/snapshots/parenthesized_unit_call_statement.snap
---
source: tests/spec/emit/expressions.rs
description: |
  
  fn noop() {}
  
  fn main() {
    (noop())
  }
---
package main

func noop() {}

func main() {
	noop()
}
