tests/spec/emit/snapshots/partial_both_construction.snap
---
source: tests/spec/emit/partial.rs
description: |
  
  fn test() -> Partial<int, string> {
    Partial.Both(42, "eof")
  }
---
package main

import lisette "github.com/ivov/lisette/prelude"

func test() lisette.Partial[int, string] {
	return lisette.MakePartialBoth(42, "eof")
}
