tests/spec/emit/snapshots/partial_err_construction.snap
---
source: tests/spec/emit/partial.rs
description: |
  
  fn test() -> Partial<int, string> {
    Partial.Err("fail")
  }
---
package main

import lisette "github.com/ivov/lisette/prelude"

func test() lisette.Partial[int, string] {
	return lisette.MakePartialErr[int, string]("fail")
}
