tests/spec/emit/snapshots/partial_impl_phantom_type_arg.snap
---
source: tests/spec/emit/types.rs
description: |
  
  struct Pair<A, B> { a: A, b: B }
  
  impl<T> Pair<T, T> {
    fn tag<U>(self) -> int { 1 }
  }
  
  fn test() -> int {
    let p = Pair { a: 1, b: 2 };
    p.tag<string>()
  }
---
package main

type Pair[A any, B any] struct {
	a A
	b B
}

func Pair_tag[T any, U any](_ Pair[T, T]) int {
	return 1
}

func test() int {
	p := Pair[int, int]{
		a: 1,
		b: 2,
	}
	return Pair_tag[int, string](p)
}
