tests/spec/emit/snapshots/partial_impl_primitive_arg_uses_ufcs.snap
---
source: tests/spec/emit/types.rs
description: |
  
  struct Pair<A, B> {
    a: A,
    b: B,
  }
  
  impl<B> Pair<int, B> {
    fn left(self) -> int {
      self.a
    }
  }
  
  fn test() -> int {
    let p = Pair { a: 1, b: "x" };
    p.left()
  }
---
package main

type Pair[A any, B any] struct {
	a A
	b B
}

func Pair_left[B any](self Pair[int, B]) int {
	return self.a
}

func test() int {
	p := Pair[int, string]{
		a: 1,
		b: "x",
	}
	return Pair_left(p)
}
