tests/spec/emit/snapshots/partial_impl_primitive_receiver_return_only_type_args.snap
---
source: tests/spec/emit/types.rs
description: "\nstruct Pair<A, B> { a: A, b: B }\n\nimpl<B> Pair<int, B> {\n  fn make<U>(self) -> U { panic(\"boom\") }\n}\n\nfn test() {\n  let p: Pair<int, bool> = Pair { a: 1, b: true };\n  let x: string = p.make();\n  let _ = x;\n}\n"
---
package main

type Pair[A any, B any] struct {
	a A
	b B
}

func Pair_make[B any, U any](_ Pair[int, B]) U {
	panic("boom")
}

func test() {
	p := Pair[int, bool]{
		a: 1,
		b: true,
	}
	x := Pair_make[bool, string](p)
	_ = x
}
