tests/spec/emit/snapshots/partial_impl_repeated_explicit_type_args.snap
---
source: tests/spec/emit/types.rs
description: |
  
  struct Pair<A, B> { a: A, b: B }
  
  impl<T> Pair<T, T> {
    fn keep<U>(self, x: U) -> U { x }
  }
  
  fn test() -> string {
    let p = Pair { a: 1, b: 2 };
    p.keep<int, string>("ok")
  }
---
package main

type Pair[A any, B any] struct {
	a A
	b B
}

func Pair_keep[T any, U any](_ Pair[T, T], x U) U {
	return x
}

func test() string {
	p := Pair[int, int]{
		a: 1,
		b: 2,
	}
	return Pair_keep[int, string](p, "ok")
}
